--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expensify",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "author": "Teng",
   "license": "MIT",
@@ -35,5 +35,6 @@
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
   },
-  "description": "dev-server"
+  "description": "dev-server",
+  "repository": "https://github.com/TENGQU1986/expensify.git"
 }
