--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "4.2.0",
+    "history": "4.7.2",
     "loader": "^2.1.1",
     "moment": "2.19.3",
     "node-sass": "4.5.3",
